# pirate-synth

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  generate_sine_wav.py  sonar-project.properties
.cargo/: config.toml
.github/workflows/: build.yml  codeql.yml
assets/wavetables/A/: sine.txt
crates/app/: Cargo.toml
crates/app/src/: main.rs
crates/audio_alsa/: Cargo.toml
crates/audio_alsa/src/: lib.rs
crates/controller/: Cargo.toml
crates/controller/src/: lib.rs
crates/engine/: Cargo.toml
crates/engine/examples/: render_granular.rs
crates/engine/src/: granular.rs  lib.rs  reverb.rs  types.rs  wav.rs  wavetable.rs
crates/ui/: Cargo.toml
crates/ui/src/: buttons.rs  display.rs  font.rs  framebuffer.rs  ili9341.rs  joystick.rs  lib.rs  linuxfb.rs  menu.rs  redesign.rs
crates/visuals_drm/: Cargo.toml
crates/visuals_drm/src/: lib.rs
scripts/: build-deps.sh  deploy.sh  package.sh  update.sh
sdcard/boot/firmware/: firstrun.sh
sdcard/boot/firmware/pirate-synth/: generate_wt_bank_complex.sh  generate_wt_bank_crypto.sh  generate_wt_bank_live.sh  generate_wt_bank_seismic.sh  generate_wt_bank_soft.sh  generate_wt_bank_solar.sh  generate_wt_bank_tidal.sh  install-gpi.sh  install.sh  pirate-synth-firstboot.service  pirate-synth-gpi-firstboot.service  pirate-synth.service
sdcard/boot/firmware/pirate-synth/config/: config-gpi.toml  config.toml
sdcard/boot/firmware/pirate-synth/overlays/: dpi24.dts
sdcard/boot/firmware/pirate-synth/wavetables/: sine.wt
sdcard/boot/firmware/pirate-synth/wavetables/A/: soft_random_02_256.wt  (+51 more)
(+86 files in other folders)
