[workspace]
members = [
  "crates/engine",
  "crates/audio_alsa",
  "crates/ui",
  "crates/visuals_drm",
  "crates/app",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
toml = "1.1"
thiserror = "2"
