[package]
name = "pirate_synth"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "pirate_synth"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
serde.workspace = true
toml.workspace = true
crossbeam-channel = "0.5"
midir = "0.11.0"
audio_alsa = { path = "../audio_alsa" }
controller = { path = "../controller" }
engine = { path = "../engine" }
ui = { path = "../ui" }
visuals_drm = { path = "../visuals_drm" }
log = "0.4.29"
env_logger = "0.11.10"
